# public

./: README.md
Advanced Programming/: README.md
Applied Image Processing/: README.md
Applied Image Processing/lab1/: Miguel Neves Dos Reis Prazeres - 30 September, 2023 2201.txt
Applied Image Processing/lab2/: Miguel Neves Dos Reis Prazeres - 14 October, 2023 2025.txt
Conversational Agents/: README.md  build.gradle  skill.properties
Personal Projects/: README.md
Personal Projects/frontend/: index.html  package-lock.json  package.json
Personal Projects/quarkus/: .gitignore  README.md  build.gradle  gradle.properties  sequence.puml  settings.gradle
Real-Time Systems/: README.md
Real-Time Systems/project A/: .gitignore  CMakeLists.txt  README.md  app.overlay  prj.conf  zephyr-install.sh
Real-Time Systems/project B/: CMakeLists.txt  README.md  app.overlay  output.txt  prj.conf  zephyr-install.sh
Real-Time Systems/project B/src/: RotaryEncoder.hpp  Switch.cpp  Switch.hpp  audio.cpp  audio.h  filter.hpp  i2c.c  i2c.h  key.cpp  key.hpp  leds.cpp  leds.h  lfo.hpp  main.cpp  peripherals.cpp  peripherals.h  sine.hpp  synth.cpp  synth.hpp  usb.c  usb.h
Software Engineering/: README.md
Software Engineering/project/: .gitignore  README.md  docker-compose.yml  pom.xml
Software Security/: README.md
Software Security/project/: 5-patterns.json
Software Specification/: README.md
Software Specification/Exame study/: ERGroup2.dfy  ERGroup4.dfy  ERGroup5.dfy  ERGroup6.dfy  ERGroup8.als  Ex2.dfy  ExTree.dfy  (+1 more)
Software Testing and Validation/: README.md
(+701 files in other folders)
